# mqo-mcp

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  README.md  clippy.toml  deny.toml
aso-ground/: CHANGELOG.md  Cargo.toml
aso-ground/src/: lib.rs  main.rs
aso-lift/: CHANGELOG.md  Cargo.toml
aso-lift/src/: lib.rs  main.rs
aso-lift/tests/: lift_integration.rs
aso-tbox/: CHANGELOG.md  Cargo.toml
aso-tbox/ontology/: aso.ttl
aso-tbox/src/: lib.rs
dh-export/: Cargo.toml  README.md  clippy.toml  deny.toml
dh-export/agent/: intent-card.json
dh-export/src/: error.rs  lib.rs  receipt.rs  types.rs
dh-mcp-server/: CHANGELOG.md  Cargo.toml  README.md  deny.toml
dh-mcp-server/agent/: intent-card.json  owner-map.json  proof-lanes.toml  test-map.json
dh-mcp-server/src/: chart_tools.rs  convert.rs  lib.rs  main.rs  mcp.rs
dh-mcp-server/tests/: acceptance.rs
dh-ops/: .gitignore  Cargo.toml  LICENSE-APACHE  README.md  deny.toml
dh-ops/agent/: intent-card.json  owner-map.json  test-map.json
dh-ops/src/: lib.rs
dh-spec/: Cargo.toml  README.md  clippy.toml  deny.toml
dh-spec/agent/: intent-card.json  owner-map.json  test-map.json
dh-spec/mutants.out/: caught.txt  lock.json  mutants.json  outcomes.json
dh-spec/schema/: dh-spec.schema.json
dh-spec/src/: lib.rs
dh-spec/tests/: ac1_round_trip.rs  ac2_summary_bounded.rs  ac3_capability_set.rs  ac4_op_result_new_handle.rs  ac5_lineage_multi_parent.rs  ac6_schema_validation.rs  ac7_cargo_clean.rs
dh-store/: Cargo.toml  LICENSE-APACHE  README.md  clippy.toml  deny.toml
dh-store/agent/: intent-card.json  owner-map.json  proof-lanes.toml  test-map.json
dh-store/src/: dataset.rs  error.rs  lib.rs  store.rs
dh-summary/: Cargo.toml  README.md  deny.toml
dh-summary/agent/: intent-card.json  owner-map.json  proof-lanes.toml  test-map.json
dh-summary/mutants.out/: caught.txt  lock.json  missed.txt  outcomes.json  unviable.txt
dh-summary/mutants.out.old/: caught.txt  lock.json  missed.txt  mutants.json  outcomes.json
dh-summary/src/: lib.rs
dh-vs-json-bench/: .gitignore  Cargo.toml  README.md
dh-vs-json-bench/agent/: intent-card.json
dh-vs-json-bench/fixtures/: arm_a_outputs.json  arm_b_outputs.json  stub_grader.sh  tasks.json
dh-vs-json-bench/src/: grader.rs  lib.rs  main.rs  report.rs  runner.rs  types.rs
dh-vs-json-bench/tests/: integration.rs  integration_cli.rs
mcp-cluster-health-monitor/: Cargo.toml  README.md
mcp-cluster-health-monitor/src/: lib.rs  main.rs  probe.rs  report.rs
mcp-cluster-health-monitor/tests/: ac1_healthy.rs  ac2_unreachable.rs  ac3_exit_codes.rs  ac4_backend_unconfirmed.rs  ac5_concurrent.rs  ac6_bad_registry.rs  ac7_timeout.rs  helpers.rs
mcp-cluster-registry/: Cargo.toml  README.md
mcp-cluster-registry/src/: lib.rs
mcp-cluster-registry/tests/: ac1_parse.rs  ac2_duplicate.rs  ac3_priority.rs  ac4_backend.rs  ac5_roundtrip.rs  ac6_validation.rs  ac7_no_secret_leak.rs
mcp-concept-graph/: Cargo.toml  README.md
mcp-concept-graph/src/: lib.rs
mcp-concept-graph/tests/: ac1_construction.rs  ac2_derives_from.rs  ac3_k_hop.rs  ac4_shortest_path.rs  ac5_subgraph.rs  ac6_json_roundtrip.rs  bench_graph.rs
mcp-cross-cluster-diff/: Cargo.toml  README.md
mcp-cross-cluster-diff/src/: catalog.rs  diff.rs  lib.rs  main.rs  report.rs
mcp-cross-cluster-diff/tests/: ac1_agree.rs  ac2_diverge.rs  ac3_critical_diverge.rs  ac4_only_in_a.rs  ac5_concurrent.rs  ac6_one_cluster_fails.rs  ac7_tolerance.rs
mcp-finding-store/: Cargo.toml  README.md
mcp-finding-store/src/: lib.rs
mcp-finding-store/tests/: ac1_first_sight.rs  ac2_supersede.rs  ac3_status_closes_open.rs  ac4_append_only.rs  ac5_fold.rs  ac6_corrupt.rs  ac7_deterministic.rs
mcp-hypothesis-engine/: Cargo.toml  README.md
mcp-hypothesis-engine/src/: engine.rs  lib.rs  main.rs
mcp-hypothesis-engine/tests/: ac1_corroborated_probe.rs  ac2_probe_valid.rs  ac3_evidence.rs  ac4_structural_only.rs  ac5_from_event.rs  ac6_missing_and_topk.rs  bench_perf.rs
mcp-interaction-scorer/: Cargo.toml
mcp-interaction-scorer/agent/: intent-card.json
mcp-interaction-scorer/scripts/: run-metrics.sh
mcp-interaction-scorer/src/: lib.rs
mcp-interaction-scorer/tests/: acceptance_ac1.rs  acceptance_ac2.rs  acceptance_ac3.rs  acceptance_ac4.rs  acceptance_ac5.rs  acceptance_ac7.rs
mcp-investigation-orchestrator/: Cargo.toml
mcp-investigation-orchestrator/agent/: intent-card.json
mcp-investigation-orchestrator/src/: main.rs
mcp-investigation-orchestrator/tests/: ac1_happy_path.rs  ac2_budget_halt.rs  ac3_idempotent_upsert.rs
mcp-probe-executor/: Cargo.toml  README.md
mcp-probe-executor/agent/: intent-card.json
mcp-probe-executor/src/: main.rs
mcp-probe-executor/tests/: ac1_confirm_refute.rs  ac2_budget_halt.rs  ac3_checkin.rs  ac4_schema.rs  ac5_inconclusive_isolation.rs  ac6_budget_accounting.rs  bench_resolve.rs
mcp-query-budget-governor/: Cargo.toml  README.md
mcp-query-budget-governor/src/: lib.rs
mcp-query-budget-governor/tests/: ac1_query_bands.rs  ac2_halt_precedence.rs  ac3_none_unbounded.rs  ac4_ingest_audit.rs  ac5_wall_clock.rs  ac6_pure_check.rs  ac7_agentns_fallback.rs
mcp-spike-evidence-bundle/: Cargo.toml  README.md  clippy.toml
mcp-spike-evidence-bundle/agent/: intent-card.json  owner-map.json  proof-lanes.toml  test-map.json
mcp-spike-evidence-bundle/fixtures/: bench_report.json  footprint.json  handle_demo.json  ticket_map.json  walkthrough.json
mcp-spike-evidence-bundle/src/: lib.rs  main.rs
mcp-spike-evidence-bundle/tests/: acceptance_AC1.rs  acceptance_AC2.rs  acceptance_AC3.rs  acceptance_AC4.rs  acceptance_AC5.rs  (+2 more)
mcp-trace-store/: Cargo.toml  README.md
mqo-auth-bridge/: CHANGELOG.md  Cargo.toml  README.md
mqo-backend-live-harness/: Cargo.toml  README.md
mqo-backend-router/: CHANGELOG.md  Cargo.toml  README.md  clippy.toml  deny.toml
mqo-bench-history/: Cargo.toml  README.md
mqo-catalog-binder/: CHANGELOG.md  Cargo.toml  README.md
mqo-chart-caption/: Cargo.toml  README.md
mqo-chart-recommender/: Cargo.toml  LICENSE-APACHE  README.md
(+680 files in other folders)
