[package]
name = "dh-export"
version = "0.1.0"
edition = "2021"
rust-version = "1.70.0"
description = "Audited materialization boundary — export a DatasetHandle to CSV / JSON / Parquet with atomic file writes and an ExportReceipt"
license = "MIT OR Apache-2.0"

[lib]
name = "dh_export"
path = "src/lib.rs"

[dependencies]
dh-spec  = { path = "../dh-spec" }
dh-store = { path = "../dh-store" }
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
csv          = "1"
sha2         = "0.10"
hex          = "0.4"
tempfile     = "3"

# Parquet export — off by default; enable with --features parquet
[dependencies.arrow]
version  = "53"
optional = true

[dependencies.parquet]
version  = "53"
optional = true

[features]
default = []
parquet = ["dep:arrow", "dep:parquet"]

[dev-dependencies]
tempfile = "3"
