[package]
name = "dh-ops"
version = "0.1.0"
edition = "2021"
rust-version = "1.70.0"
description = "Deterministic in-place operation kernel for the dh-* MCP fleet"
license = "MIT OR Apache-2.0"

[lib]
name = "dh_ops"
path = "src/lib.rs"

[dependencies]
dh-spec   = { path = "../dh-spec" }
dh-store  = { path = "../dh-store" }
dh-summary = { path = "../dh-summary" }
serde_json = "1"

[dev-dependencies]
# none needed beyond [dependencies]
