[package]
name = "dh-spec"
version = "0.1.0"
edition = "2021"
rust-version = "1.70.0"
description = "Dataset-Handle protocol types — the shared vocabulary for the dh-* MCP fleet"
license = "MIT OR Apache-2.0"
keywords = ["semantic-layer", "dataset", "handle", "schema", "serde"]
categories = ["data-structures", "encoding"]

[lib]
name = "dh_spec"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = { version = "0.8", features = ["derive"] }

[dev-dependencies]
# none needed — all test deps are in [dependencies]

[features]
default = []
