[package]
name = "dh-store"
version = "0.1.0"
edition = "2021"
rust-version = "1.70.0"
description = "In-memory columnar dataset store with opaque handles, TTL+LRU eviction, and immutable derive semantics"
license = "MIT OR Apache-2.0"

[lib]
name = "dh_store"
path = "src/lib.rs"

[dependencies]
dh-spec = { path = "../dh-spec" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
proptest = "1"
