[package]
name = "dh-vs-json-bench"
version = "0.1.0"
edition = "2021"
rust-version = "1.74.0"
description = "Handle vs raw-JSON benchmark CLI — arm A (raw-JSON: model computes answer) vs arm B (handle: server-computed answer via dataset_* tools)"
license = "MIT OR Apache-2.0"

[[bin]]
name = "dh-bench"
path = "src/main.rs"

[lib]
name = "dh_vs_json_bench"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
thiserror = "1"

[dev-dependencies]
tempfile = "3"
