[package]
name = "mcp-concept-graph"
version = "0.1.0"
edition = "2021"
description = "Attributed property graph of the AtScale semantic model, derived from describe_model JSON"
license = "MIT OR Apache-2.0"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"

[dev-dependencies]
