[package]
name = "mqo-auth-bridge"
version = "0.5.0"
edition = "2021"
rust-version = "1.70.0"
description = "OIDC client-credentials token flow + live query executor (PGWire DAX/SQL, XMLA MDX) behind an Engine trait for the MQO MCP server"
license = "MIT OR Apache-2.0"
repository = "https://github.com/joeyen-atscale/mqo-auth-bridge"
keywords = ["semantic-layer", "olap", "mqo", "oidc", "atscale"]
categories = ["authentication", "database"]

[lib]
name = "mqo_auth_bridge"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["rt", "macros", "rt-multi-thread", "time"] }
tokio-postgres = { version = "0.7", features = ["with-serde_json-1"] }
postgres-native-tls = "0.5"
native-tls = "0.2"
reqwest = { version = "0.12", features = ["json", "native-tls"] }
quick-xml = { version = "0.37", features = ["serialize"] }
futures = "0.3"

[dev-dependencies]
wiremock = "0.5"
tokio = { version = "1", features = ["rt", "macros", "rt-multi-thread", "time"] }
