[package]
name = "mqo-backend-router"
version = "0.2.0"
edition = "2021"
rust-version = "1.70.0"
description = "MQO backend router — routes a BoundMqo to DAX, MDX, or SQL based on shape and cardinality"
license = "MIT OR Apache-2.0"

[[bin]]
name = "mqo-route"
path = "src/main.rs"

[lib]
name = "mqo_backend_router"
path = "src/lib.rs"

[dependencies]
mqo-spec = { path = "../mqo-spec" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
thiserror = "1"

[dev-dependencies]
tempfile = "3"
