[package]
name = "mqo-catalog-binder"
version = "0.4.0"
edition = "2021"
rust-version = "1.70.0"
description = "MQO catalog binder — resolves MQO refs to exact unique_names in a catalog snapshot"
license = "MIT OR Apache-2.0"
repository = "https://github.com/joeyen-atscale/mqo-catalog-binder"
keywords = ["semantic-layer", "olap", "mqo", "binder", "atscale"]
categories = ["command-line-utilities"]

[[bin]]
name = "mqo-bind"
path = "src/main.rs"

[lib]
name = "mqo_catalog_binder"
path = "src/lib.rs"

[dependencies]
mqo-spec = { path = "../mqo-spec" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
tempfile = "3"
which = "4"
serde_json = "1"
mqo-spec = { path = "../mqo-spec" }
